[metadata]
name = pancaim-cdm
version = 0.1.0
author = The Hyve
author_email = office@thehyve.nl
description = PANCAIM CDM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thehyve/PANCAIM-CDM
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =
    SQLAlchemy >= 1.4, <1.5
    pandas >= 1.0.5, <2
    pydantic >= 1.7, <2

[options.packages.find]
where = src

[options.extras_require]
TEST = pytest >=7; pytest-postgresql >=4.1; psycopg >= 3.1; pytest-cov; docker; sqlalchemy-utils >= 0.37; psycopg2-binary >= 2.8, <3
